additional styling updates on job details page

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -8,7 +8,7 @@
     <a href="{% url 'index' %}" class="lg:w-2/3">
       <div
         class="card p3 my-3 bg-white min-h-56 text-center shadow-md hover:shadow-lg hover:scale-[1.01] transition-all duration-300 ease-in-out">
-        <h3 class="bg-green-400 p-2 font-semibold">Job Applications (4 total)</h3>
+        <h3 class="bg-green-400 p-2 font-semibold">Job Applications ({{ jobs.count }} total)</h3>
       </div>
     </a>
     <a href="#" class="lg:w-2/3">
