--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -6,14 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>appMate Login</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	{% tailwind_css %}
 </head>
-<body>
-  
-</body>
 </html>
 <body>
+  <!--LOGO-->
   <nav>
     <a href="{% url 'signup'	%}">
       <svg
@@ -43,6 +40,7 @@
   </nav>
 
   <div class="flex justify-center items-center h-screen bg-blue-400">
+
     <!--Login container-->
     <div class="w-96 p-6 shadow-lg bg-white rounded-md">
       <h1 class="text-3xl block text-center font-semibold"><i class="fa-solid fa-user-astronaut"></i>Login:</h1>
