--- a/main_app/templates/main_app/job_form.html
+++ b/main_app/templates/main_app/job_form.html
@@ -49,6 +49,16 @@
     </div>
   </section>
 
+  <form action="{% url 'jobs_create' %}" method="POST">
+    <!-- Django requires the following for security purposes -->
+    {% csrf_token %}
+    <table>
+      <!-- Render the inputs inside of <tr>s & <td>s -->
+      {{ form.as_table }}
+    </table>
+    <input type="submit" value="Submit!" class="btn">
+  </form>
+
 
 </section>
 </div>
