updates forms styling and changes form labels in model

--- a/main_app/templates/main_app/job_form.html
+++ b/main_app/templates/main_app/job_form.html
@@ -49,7 +49,8 @@
     </div>
   </section>
 
-  <form action="{% url 'jobs_create' %}" method="POST">
+  
+  <form action="" method="POST">
     <!-- Django requires the following for security purposes -->
     {% csrf_token %}
     <table>
