--- a/main_app/static_src/src/styles.css
+++ b/main_app/static_src/src/styles.css
@@ -13,5 +13,17 @@
 }
 
 .button-text {
-  @apply font-secondary font-light uppercase tracking-[.25em] hover:shadow-inner
+  @apply font-secondary font-light uppercase tracking-[.25em] hover:shadow-inner;
+}
+
+label[for="id_description"] {
+  @apply font-primary font-semibold text-primary text-xl;
+}
+
+#id_description {
+  @apply border-2 rounded-xl border-gray-300 block;
+}
+
+#id_date {
+  @apply rounded-full border-gray-300 border-2 my-2;
 }
