--- a/main_app/templates/jobs/detail.html
+++ b/main_app/templates/jobs/detail.html
@@ -118,7 +118,7 @@
           <input type="submit" value="Add Update" class="self-center my-4 cursor-pointer button-text text-xs hover:text-primary border-2 border-primary bg-primary hover:bg-white text-white px-6 py-0.5 rounded-full transition duration-300">
         </form>
 
-        <form action="{% url 'add_status' job.id %}" class="pb-5 t-3 bg-whiteflex flex flex-col justify-center text-center px-10">
+        <form action="" class="pb-5 t-3 bg-whiteflex flex flex-col justify-center text-center px-10">
           {% csrf_token %}
           <label class="font-primary font-semibold text-primary text-xl">Add New Status Update:</label>
           <input type="date" name="date" format="('%Y-%m-%d')" class="rounded-full border-gray-300 border-2 my-2">
