adds styling to forms

--- a/main_app/templates/jobs/detail.html
+++ b/main_app/templates/jobs/detail.html
@@ -184,7 +184,7 @@
       <form action="{% url 'add_todo' job.id %}" method="POST" class="text-center flex flex-col items-center justify-center p-3">
         {% csrf_token %}
         <label class="font-primary font-semibold text-primary text-xl">Add New To-Do Item:</label>
-        <textarea class="border-2 rounded-xl border-gray-300 block w-full" name="description" cols="30" rows="8" placeholder="Research React and Vue before interview"></textarea>
+        <textarea class="border-2 rounded-xl border-gray-300 block w-full" name="description" cols="30" rows="8" placeholder="Add to-do here"></textarea>
         <input type="submit" value="Add To-Do" class="my-4 cursor-pointer button-text inline-block text-xs hover:text-primary border-2 border-primary bg-primary hover:bg-white text-white px-6 py-0.5 rounded-full transition duration-300">
       </form>
 
