--- a/main_app/templates/main_app/job_form.html
+++ b/main_app/templates/main_app/job_form.html
@@ -2,23 +2,33 @@
 {% block content %}
 
 <div class="p-8">
-  <div class="flex justify-center xl:justify-start">
-    <h1 class="font-primary text-primary font-semibold text-3xl">Add New Job</h1>
-  </div>
+  {% if object %}
+    <div class="flex justify-center">
+      <h1 class="font-primary text-primary font-semibold capitalize text-3xl">Edit: {{ object.position }} @ {{ object.company }}</h1>
+    </div>
+  {% else %}
+    <div class="flex justify-center">
+      <h1 class="font-primary text-primary font-semibold text-3xl">Add New Job</h1>
+    </div>
+  {% endif %}
 
-  <section>
-    <div class="card p3 my-3 min-h-fit text-center shadow-md 2xl:w-3/4 w-full">
+  <section class="flex justify-center">
+    <div class="card my-3 min-h-fit text-center shadow-md 2xl:w-1/2 w-full">
       <!-- green header -->
       <div class="bg-green-400 flex items-center justify-start p-2">
         <h4 class="font-semibold mx-auto capitalize">
-          New Job Application
+          {% if object %}
+            {{ object.position }} @ {{ object.company }}
+          {% else %}
+            New Job Application
+          {% endif %}
         </h4>
       </div>
         
       <div class="bg-white">
         <form action="" method="POST">
           {% csrf_token %}
-          <div class="grid grid-cols-2 gap-3 p-5 text-center">
+          <div class="grid grid-cols-1 gap-3 p-5 text-center">
             {{ form.as_div }}
           </div>
           <input type="submit" value="Submit" class="cursor-pointer button-text bg-primary border-2 border-primary text-white text-sm px-8 py-1 rounded-full my-6 hover:text-primary hover:bg-white transition duration-300">
@@ -27,8 +37,6 @@
 
     </div>
   </section>
-
-<div class="hidden col-span-2"></div>
 
 </section>
 </div>
