fixes logo styling on login

--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -10,10 +10,10 @@
 </html>
 <body>
   <!--LOGO-->
-  <nav>
+  <nav class="flex justify-center shadow-2xl">
     <a href="{% url 'signup'	%}">
       <svg
-        class="w-1/2"
+        class="w-72 py-3"
         viewBox="0 0 158 29"
         fill="none"
         xmlns="http://www.w3.org/2000/svg">
