--- a/main_app/templates/jobs/detail.html
+++ b/main_app/templates/jobs/detail.html
@@ -59,9 +59,8 @@
 							<h4 class="font-semibold mx-auto">Posted Salary</h4>
 						</div>
 						<div class="flex-col justify-center items-center p-5 bg-gray-100">
-							<p
-								class="font-primary xl:text-xl text-4xl font-bold text-green-600">
-								${{ job.salary }}
+							<p class="font-primary xl:text-xl text-4xl font-bold text-green-600">
+								$<span id="salary">{{ job.salary }}</span>
 							</p>
 						</div>
 					</div>
