--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -24,8 +24,8 @@
     <h1 class="text-2xl font-primary font-bold text-primary">Going Cold</h1>
 
     <!-- Container for job app and connections containers -->
-    <div class="lg:flex lg:gap-6 mt-4 h-fit">
-      <div class="lg:w-1/2 h-80 overflow-scroll px-3">
+    <div class="lg:flex mt-4 h-fit bg-violet-200 rounded-2xl">
+      <div class="lg:w-1/2 h-[27rem] overflow-scroll px-4 py-3">
 
         {% for job in jobs %}
           {% if job.days_since_update > 21 %}
@@ -72,7 +72,7 @@
       </div>
 
       <!-- Cold Connections container -->
-      <div class="lg:w-1/2 h-96 overflow-scroll px-3 h-80">
+      <div class="lg:w-1/2 h-96 overflow-scroll px-4 py-3">
         <!-- Cold Connections Card template -->
         <a href="">
           <div class="card my-3 bg-cyan-100 min-h-fit text-center hover:scale-[1.01] transition-all duration-300 ease-in-out">
