--- a/main_app/templates/jobs/index.html
+++ b/main_app/templates/jobs/index.html
@@ -109,8 +109,8 @@
     <h1 class="font-primary font-bold text-primary text-3xl mt-10">Bookmarked Jobs ({{ num_bookmarked }})</h1>
   </div>
 
-  <section class="card my-3 bg-violet-100 min-h-80 h-fit p-6 overflow-scroll">
-    <div class="grid xl:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-x-3 gap-y-1">
+  <section class="card my-3 bg-violet-100 p-6 ">
+    <div class="grid xl:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-x-3 gap-y-1 h-40 overflow-scroll">
       {% for job in jobs %}
         {% if job.bookmarked %}
           <a href="{% url 'detail' job.id %}">
@@ -124,13 +124,21 @@
   </section>
 
   <div class="flex justify-center xl:block">
-    <h1 class="font-primary font-bold text-primary text-3xl mt-10 overflow-scroll">Search My Job Apps</h1>
+    <h1 class="font-primary font-bold text-primary text-3xl mt-10">Search My Job Apps</h1>
   </div>
-  <label class="relative">
-    <svg id="search" class="w-5 absolute bottom-0 left-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-      <path fill-rule="evenodd" d="M10.5 3.75a6.75 6.75 0 1 0 0 13.5 6.75 6.75 0 0 0 0-13.5ZM2.25 10.5a8.25 8.25 0 1 1 14.59 5.28l4.69 4.69a.75.75 0 1 1-1.06 1.06l-4.69-4.69A8.25 8.25 0 0 1 2.25 10.5Z" clip-rule="evenodd" />
-    </svg>   
-    <input id="search-bar" class="w-full my-4 border-0 bg-violet-100 rounded-full px-6 font-secondary" type="text">
-  </label>
+
+  <form action="" method="GET">
+    <label class="relative">
+      <svg id="search" class="w-5 absolute bottom-0 left-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+        <path fill-rule="evenodd" d="M10.5 3.75a6.75 6.75 0 1 0 0 13.5 6.75 6.75 0 0 0 0-13.5ZM2.25 10.5a8.25 8.25 0 1 1 14.59 5.28l4.69 4.69a.75.75 0 1 1-1.06 1.06l-4.69-4.69A8.25 8.25 0 0 1 2.25 10.5Z" clip-rule="evenodd" />
+      </svg>   
+    </label>
+    <input id="search-bar" class="2xl:w-1/2 w-full my-4 border-0 bg-violet-100 rounded-full px-10 font-secondary" placeholder="Enter a company name to search..." type="text">
+    <button type="submit" class="button-text block lg:inline-block mx-auto shrink-0 bg-primary border-2 border-primary text-white text-sm ml-3 px-6 py-2 rounded-full hover:text-primary hover:bg-white transition duration-300">Search</button>
+  </form>
+
+  <div>
+
+  </div>
 </div>
 {% endblock %}
