--- a/main_app/templates/jobs/index.html
+++ b/main_app/templates/jobs/index.html
@@ -16,7 +16,7 @@
     <!-- pending container -->
     <div class="flex-col xl:w-1/4">
       <div class="flex justify-center items-center gap-4">
-        <div class="w-4 h-4 rounded-full bg-green-300 inline-block"></div>
+        <div class="w-4 h-4 rounded-full bg-slate-300 inline-block"></div>
         <span>Submitted / Pending ({{ num_p }})</span>
       </div>
       <div class="bg-violet-100 p-3 mt-3 rounded-lg h-44 overflow-scroll capitalize">
@@ -24,8 +24,15 @@
         {% for job in jobs %}
           {% if job.progress == 'P'%}
             <a href="{% url 'detail' job.id %}">
-              <div class="text-sm bg-green-300 py-1 px-2 mb-1 rounded-md text-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
-                {{ job.position }} @ {{ job.company }}
+              <div class="flex items-center text-sm bg-slate-300 py-1 px-2 mb-1 rounded-md text-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
+                {% if job.bookmarked %}
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-4 h-4 mr-2">
+                  <path fill-rule="evenodd" d="M6.32 2.577a49.255 49.255 0 0 1 11.36 0c1.497.174 2.57 1.46 2.57 2.93V21a.75.75 0 0 1-1.085.67L12 18.089l-7.165 3.583A.75.75 0 0 1 3.75 21V5.507c0-1.47 1.073-2.756 2.57-2.93Z" clip-rule="evenodd" />
+                </svg>             
+                {% endif %}
+                <div class="mx-auto">
+                  {{ job.position }} @ {{ job.company }}
+                </div>
               </div>
             </a>
           {% endif %}
@@ -38,18 +45,25 @@
     <!-- interviewing container -->
     <div class="flex-col xl:w-1/4">
       <div class="flex justify-center items-center gap-4">
-        <div class="w-4 h-4 rounded-full bg-green-400 inline-block"></div>
+        <div class="w-4 h-4 rounded-full bg-yellow-200 inline-block"></div>
         <span>Interviewing ({{ num_i }})</span>
       </div>
       <div class="bg-violet-100 p-3 mt-3 rounded-lg h-44 overflow-scroll capitalize">
         <!-- for each - interviewing jobs goes here -->
         {% for job in jobs %}
           {% if job.progress == 'I'%}
-            <a href="{% url 'detail' job.id %}">
-              <div class="text-sm bg-green-400 py-1 px-2 mb-1 rounded-md text-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
+          <a href="{% url 'detail' job.id %}">
+            <div class="flex items-center text-sm bg-yellow-200 py-1 px-2 mb-1 rounded-md text-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
+              {% if job.bookmarked %}
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-4 h-4 mr-2">
+                <path fill-rule="evenodd" d="M6.32 2.577a49.255 49.255 0 0 1 11.36 0c1.497.174 2.57 1.46 2.57 2.93V21a.75.75 0 0 1-1.085.67L12 18.089l-7.165 3.583A.75.75 0 0 1 3.75 21V5.507c0-1.47 1.073-2.756 2.57-2.93Z" clip-rule="evenodd" />
+              </svg>             
+              {% endif %}
+              <div class="mx-auto">
                 {{ job.position }} @ {{ job.company }}
               </div>
-            </a>
+            </div>
+          </a>
           {% endif %}
         {% endfor %}
 
@@ -61,18 +75,25 @@
     <!-- offers container -->
     <div class="flex-col xl:w-1/4">
       <div class="flex justify-center items-center gap-4">
-        <div class="w-4 h-4 rounded-full bg-green-500 inline-block"></div>
+        <div class="w-4 h-4 rounded-full bg-green-400 inline-block"></div>
         <span>Offers Extended ({{ num_o }})</span>
       </div>
       <div class="bg-violet-100 p-3 mt-3 rounded-lg h-44 overflow-scroll capitalize">
         <!-- for each - offers jobs goes here -->
         {% for job in jobs %}
           {% if job.progress == 'O'%}
-            <a href="{% url 'detail' job.id %}">
-              <div class="text-sm bg-green-500 py-1 px-2 mb-1 rounded-md text-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
+          <a href="{% url 'detail' job.id %}">
+            <div class="flex items-center text-sm bg-green-400 py-1 px-2 mb-1 rounded-md text-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
+              {% if job.bookmarked %}
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-4 h-4 mr-2">
+                <path fill-rule="evenodd" d="M6.32 2.577a49.255 49.255 0 0 1 11.36 0c1.497.174 2.57 1.46 2.57 2.93V21a.75.75 0 0 1-1.085.67L12 18.089l-7.165 3.583A.75.75 0 0 1 3.75 21V5.507c0-1.47 1.073-2.756 2.57-2.93Z" clip-rule="evenodd" />
+              </svg>             
+              {% endif %}
+              <div class="mx-auto">
                 {{ job.position }} @ {{ job.company }}
               </div>
-            </a>
+            </div>
+          </a>
           {% endif %}
         {% endfor %}
 
@@ -83,18 +104,25 @@
     <!-- rejected container -->
     <div class="flex-col xl:w-1/4">
       <div class="flex justify-center items-center gap-4">
-        <div class="w-4 h-4 rounded-full bg-black inline-block"></div>
+        <div class="w-4 h-4 rounded-full bg-red-400 inline-block"></div>
         <span>Rejected ({{ num_r }})</span>
       </div>
       <div class="bg-violet-100 p-3 mt-3 rounded-lg h-44 overflow-scroll capitalize">
         <!-- for each - rejected jobs goes here -->
         {% for job in jobs %}
-          {% if job.progress == 'R'%}
-            <a href="{% url 'detail' job.id %}">
-              <div class="text-sm bg-black text-white py-1 px-2 mb-1 rounded-md text-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
+          {% if job.progress == 'R' %}
+          <a href="{% url 'detail' job.id %}">
+            <div class="flex items-center text-sm bg-red-400 text-white py-1 px-2 mb-1 rounded-md text-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
+              {% if job.bookmarked %}
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-4 h-4 mr-2">
+                <path fill-rule="evenodd" d="M6.32 2.577a49.255 49.255 0 0 1 11.36 0c1.497.174 2.57 1.46 2.57 2.93V21a.75.75 0 0 1-1.085.67L12 18.089l-7.165 3.583A.75.75 0 0 1 3.75 21V5.507c0-1.47 1.073-2.756 2.57-2.93Z" clip-rule="evenodd" />
+              </svg>             
+              {% endif %}
+              <div class="mx-auto">
                 {{ job.position }} @ {{ job.company }}
               </div>
-            </a>
+            </div>
+          </a>
           {% endif %}
         {% endfor %}
 
@@ -111,10 +139,10 @@
 
   <section class="card my-3 bg-violet-100 p-6 ">
     <div class="grid xl:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-x-3 gap-y-1 h-40 overflow-scroll">
-      {% for job in jobs %}
+      {% for job in jobs|dictsort:"company" %}
         {% if job.bookmarked %}
           <a href="{% url 'detail' job.id %}">
-            <div class="bg-primary font-primary text-lg text-white py-1 px-2 mb-1 min-h-10 rounded-md capitalize text-center flex justify-center items-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
+            <div class="bg-primary font-primary text-lg text-white py-1 px-2 mb-1 md:min-h-20 2xl:min-h-10 rounded-md capitalize text-center flex justify-center items-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
               {{ job.position }} @ {{ job.company }}
             </div>
           </a>
@@ -133,8 +161,8 @@
         <path fill-rule="evenodd" d="M10.5 3.75a6.75 6.75 0 1 0 0 13.5 6.75 6.75 0 0 0 0-13.5ZM2.25 10.5a8.25 8.25 0 1 1 14.59 5.28l4.69 4.69a.75.75 0 1 1-1.06 1.06l-4.69-4.69A8.25 8.25 0 0 1 2.25 10.5Z" clip-rule="evenodd" />
       </svg>   
     </label>
-    <input id="search-bar" class="2xl:w-1/2 w-full my-4 border-0 bg-violet-100 rounded-full px-10 font-secondary" placeholder="Enter a company name to search..." type="text">
-    <button type="submit" class="button-text block lg:inline-block mx-auto shrink-0 bg-primary border-2 border-primary text-white text-sm ml-3 px-6 py-2 rounded-full hover:text-primary hover:bg-white transition duration-300">Search</button>
+    <input id="search-bar" class="xl:w-1/2 w-full my-4 border-0 bg-violet-100 rounded-full px-10 font-secondary" placeholder="Enter a company name to search..." type="text">
+    <button type="submit" class="button-text block xl:inline-block mx-auto shrink-0 bg-primary border-2 border-primary text-white text-sm xl:ml-3 px-6 py-2 rounded-full hover:text-primary hover:bg-white transition duration-300">Search</button>
   </form>
 
   <div>
