--- a/main_app/templates/jobs/index.html
+++ b/main_app/templates/jobs/index.html
@@ -155,18 +155,24 @@
     <h1 class="font-primary font-bold text-primary text-3xl mt-10">Search My Job Apps</h1>
   </div>
 
-  <form action="" method="GET">
+  <form action="{% url 'index' %}" method="GET">
     <label class="relative">
       <svg id="search" class="w-5 absolute bottom-0 left-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
         <path fill-rule="evenodd" d="M10.5 3.75a6.75 6.75 0 1 0 0 13.5 6.75 6.75 0 0 0 0-13.5ZM2.25 10.5a8.25 8.25 0 1 1 14.59 5.28l4.69 4.69a.75.75 0 1 1-1.06 1.06l-4.69-4.69A8.25 8.25 0 0 1 2.25 10.5Z" clip-rule="evenodd" />
       </svg>   
     </label>
-    <input id="search-bar" class="xl:w-1/2 w-full my-4 border-0 bg-violet-100 rounded-full px-10 font-secondary" placeholder="Enter a company name to search..." type="text">
+    <input id="search-bar" name="search_query" class="lowercase xl:w-1/2 w-full my-4 border-0 bg-violet-100 rounded-full px-10 font-secondary" placeholder="Enter a company name to search..." type="text">
     <button type="submit" class="button-text block xl:inline-block mx-auto shrink-0 bg-primary border-2 border-primary text-white text-sm xl:ml-3 px-6 py-2 rounded-full hover:text-primary hover:bg-white transition duration-300">Search</button>
   </form>
 
   <div>
-
+    {% for result in results %}
+    <a href="{% url 'detail' result.id %}">
+      <div class="bg-primary font-primary text-lg text-white py-1 px-2 mb-1 md:min-h-20 2xl:min-h-10 rounded-md capitalize text-center flex justify-center items-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
+        {{ result.position }} @ {{ result.company }}
+      </div>
+    </a>
+    {% endfor %}
   </div>
 </div>
 {% endblock %}
