creates connections index page

--- a/main_app/templates/connections/index.html
+++ b/main_app/templates/connections/index.html
@@ -31,7 +31,7 @@
                   </svg>             
                   {% endif %}
                   <div class="mx-auto">
-                    {{ connection.name }} 
+                    {{ connection.name }} / {{ connection.company }}
                   </div>
                 </div>
               </a>
