connects to connections idex from dash

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -88,7 +88,7 @@
 					</a>
 
 					<!-- My Connections Button -->
-					<a class="menu-item" href="#">
+					<a class="menu-item" href="{% url 'connections_index' %}">
 						<svg
 							xmlns="http://www.w3.org/2000/svg"
 							fill="none"
