--- a/main_app/templates/connections/index.html
+++ b/main_app/templates/connections/index.html
@@ -5,87 +5,31 @@
 
     <div class="flex flex-col md:flex-row gap-3 items-center justify-between">
       <h1 class="font-primary text-primary font-bold text-3xl">
-        My connections ({{ connections.count }})
+        My Connections ({{ connections.count }})
       </h1>
       <a href="{% url 'connections_create' %}" class="button-text bg-primary border-2 border-primary text-white text-sm px-6 py-1 rounded-full hover:text-primary hover:bg-white transition duration-300">
         Add Connection
       </a>
     </div>
 
-    <!-- status columns container -->
-    <div class="mt-4 flex xl:flex-row flex-col w-full gap-5">
-      <!-- pending container -->
-
-      <div class="flex-col xl:w-1/4">
-        <div class="flex justify-center items-center gap-4">
-          <div class="w-4 h-4 rounded-full bg-slate-300 inline-block"></div>
-        </div>
-        <div class="bg-violet-100 p-3 mt-3 rounded-lg h-44 overflow-scroll capitalize">
-          <!-- for each - connections goes here -->
-          {% for connection in connections %}
-              <a href="{% url 'connections_detail' connection.id %}">
-                <div class="flex items-center text-sm bg-slate-300 py-1 px-2 mb-1 rounded-md text-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
-                  {% if connection.bookmarked %}
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-4 h-4 mr-2">
-                    <path fill-rule="evenodd" d="M6.32 2.577a49.255 49.255 0 0 1 11.36 0c1.497.174 2.57 1.46 2.57 2.93V21a.75.75 0 0 1-1.085.67L12 18.089l-7.165 3.583A.75.75 0 0 1 3.75 21V5.507c0-1.47 1.073-2.756 2.57-2.93Z" clip-rule="evenodd" />
-                  </svg>             
-                  {% endif %}
-                  <div class="mx-auto">
-                    {{ connection.name }} / {{ connection.company }}
-                  </div>
-                </div>
-              </a>
-          {% endfor %}
-  
-          <!-- end of for each -->
-        </div>
-      </div>
-  
-          <!-- end of for each -->
-        </div>
-      </div>
-
-  
-    <div class="flex justify-center xl:block">
-      <h1 class="font-primary font-bold text-primary text-3xl mt-10">Bookmarked Connections ({{ num_bookmarked }})</h1>
-    </div>
-  
-    <section class="card my-3 bg-violet-100 p-6 ">
-      <div class="grid xl:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-x-3 gap-y-1 h-40 overflow-scroll">
-          {% if connection.bookmarked %}
-            <a href="{% url 'detail' connection.id %}">
-              <div class="bg-primary font-primary text-lg text-white py-1 px-2 mb-1 md:min-h-20 2xl:min-h-10 rounded-md capitalize text-center flex justify-center items-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
-              </div>
-            </a>
-          {% endif %}
-        
-      </div>
-    </section>
-  
-    <div class="flex justify-center xl:block">
-      <h1 class="font-primary font-bold text-primary text-3xl mt-10">Search My Connections</h1>
-    </div>
-  
-    <form action="{% url 'index' %}" method="GET">
-      <label class="relative">
-        <svg id="search" class="w-5 absolute bottom-0 left-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-          <path fill-rule="evenodd" d="M10.5 3.75a6.75 6.75 0 1 0 0 13.5 6.75 6.75 0 0 0 0-13.5ZM2.25 10.5a8.25 8.25 0 1 1 14.59 5.28l4.69 4.69a.75.75 0 1 1-1.06 1.06l-4.69-4.69A8.25 8.25 0 0 1 2.25 10.5Z" clip-rule="evenodd" />
-        </svg>   
-      </label>
-      <input id="search-bar" name="search_query" class="lowercase xl:w-1/2 w-full my-4 border-0 bg-violet-100 rounded-full px-10 font-secondary" placeholder="Enter a company name to search..." type="text">
-      <button type="submit" class="button-text block xl:inline-block mx-auto shrink-0 bg-primary border-2 border-primary text-white text-sm xl:ml-3 px-6 py-2 rounded-full hover:text-primary hover:bg-white transition duration-300">Search</button>
-    </form>
-  
-    <div>
-      {% for result in results %}
-      <a href="{% url 'detail' result.id %}">
-        <div class="bg-primary font-primary text-lg text-white py-1 px-2 mb-1 md:min-h-20 2xl:min-h-10 rounded-md capitalize text-center flex justify-center items-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
-          {{ result.position }} @ {{ result.company }}
-        </div>
-      </a>
+    <!-- Connections container -->
+    <div class="grid grid-cols-3 gap-3">
+      <!-- Start forEach / Cards go here -->
+      {% for connection in connections %}
+        <a href="{% url 'connections_detail' connection.id %}">
+         <div class="card my-3 bg-white 2xl:w-64 w-full max-h-fit hover:scale-105 transition duration-300 text-center">
+            <h3 class="bg-cyan-300 p-2 capitalize font-semibold">{{ connection.name }}</h3>
+            <div class="flex flex-col items-center px-4 justify-center h-32">
+                <p class="text-2xl font-bold">{{ connection.company}}</p>
+            </div>
+         </div>
+        </a>
       {% endfor %}
+  
+          <!-- end of for each -->
     </div>
-  </div>
+</div>
+
 
 
 {% endblock %}
