--- a/main_app/templates/connections/index.html
+++ b/main_app/templates/connections/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <!-- Connections container -->
-    <div class="grid grid-cols-3 gap-3">
+    <div class="grid xl:grid-cols-3 grid-cols-1 gap-3">
       <!-- Start forEach / Cards go here -->
       {% for connection in connections %}
         <a href="{% url 'connections_detail' connection.id %}">
