--- a/main_app/templates/connections/detail.html
+++ b/main_app/templates/connections/detail.html
@@ -6,7 +6,7 @@
 <section class="xl:h-screen text-center md:text-left h-fit py-7 2xl:px-12 lg:px-5 px-8 xl:w-full">
     <div class="flex flex-col 2xl:flex-row gap-3 items-center justify-between">
         <h1 class="font-primary text-primary font-bold text-3xl capitalize text-pretty">
-            Job Application:
+            Connection: {{ connection.name }}
         </h1>
         <div class="flex text-center">
             <a href="{% url 'connections_delete' connection.id %}"
@@ -21,16 +21,16 @@
     </div>
 
     <section>
-        <!-- job details top card -->
+        <!-- connection details top card -->
         <div class="card my-3 min-h-fit text-center shadow-md w-full">
-            <!-- job details green header -->
+            <!-- connection details blue header -->
             <div class="bg-cyan-400 flex items-center justify-start p-2">
                 <h4 class="font-semibold mx-auto my-auto capitalize">
                     {{connection.name}}
                 </h4>
             </div>
 
-            <div class="grid grid-cols-1 2xl:grid-cols-4 md:grid-cols-2 items-center gap-3 p-5 bg-white ">
+            <div class="grid grid-cols-1 2xl:grid-cols-3 items-center gap-3 p-5 bg-white ">
                 <!-- inner cards here -->
                 <div class="card w-full min-h-fit text-center shadow-md">
                     <div class="bg-gray-300 flex items-center justify-start p-2">
