--- a/main_app/templates/connections/detail.html
+++ b/main_app/templates/connections/detail.html
@@ -133,11 +133,11 @@
         <!-- Connection card -->
         <div class="min-h-fit card text-center shadow-md bg-white">
             <div class="bg-cyan-300 flex items-center justify-start p-2">
-                <h4 class="font-semibold mx-auto">Associated Connection</h4>
+                <h4 class="font-semibold mx-auto">Associated Job Apps</h4>
             </div>
             <div class="flex flex-col justify-center items-center p-5 bg-white min-h-fit">
                 <p class="font-primary text-md font-normal">
-                    [test person here]
+                    [test job apps here]
                 </p>
             </div>
         </div>
