adds comma separator on salary text

--- a/main_app/templates/jobs/detail.html
+++ b/main_app/templates/jobs/detail.html
@@ -60,7 +60,7 @@
 						</div>
 						<div class="flex-col justify-center items-center p-5 bg-gray-100">
 							<p class="font-primary xl:text-xl text-4xl font-bold text-green-600">
-								$<span id="salary">{{ job.salary }}</span>
+								$<span class="salary">{{ job.salary }}</span>
 							</p>
 						</div>
 					</div>
