--- a/main_app/templates/jobs/index.html
+++ b/main_app/templates/jobs/index.html
@@ -138,11 +138,11 @@
   </div>
 
   <section class="card my-3 bg-violet-100 p-6 ">
-    <div class="grid xl:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-x-3 gap-y-1 h-40 overflow-y-auto">
+    <div class="grid xl:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-x-3 gap-y-1 h-40 overflow-y-auto px-2">
       {% for job in jobs|dictsort:"company" %}
         {% if job.bookmarked %}
           <a href="{% url 'detail' job.id %}">
-            <div class="bg-primary font-primary text-lg text-white py-1 px-2 mb-1 md:min-h-20 2xl:min-h-10 rounded-md capitalize text-center flex justify-center items-center hover:shadow-inner hover:scale-[1.04] transition duration-300">      
+            <div class="bg-primary font-primary text-lg text-white py-1 px-2 mb-1 md:min-h-20 2xl:min-h-10 rounded-md capitalize text-center flex justify-center items-center hover:shadow-inner hover:scale-[1.03] transition duration-300">      
               {{ job.position }} @ {{ job.company }}
             </div>
           </a>
