capitalizes companies in connections index

--- a/main_app/templates/connections/index.html
+++ b/main_app/templates/connections/index.html
@@ -20,7 +20,7 @@
          <div class="card bg-white w-full max-h-fit hover:scale-105 transition duration-300 text-center">
             <h3 class="bg-cyan-300 p-2 capitalize font-semibold">{{ connection.name }}</h3>
             <div class="flex flex-col items-center px-4 justify-center h-32">
-                <p class="text-2xl font-bold">{{ connection.company}}</p>
+                <p class="text-2xl font-bold capitalize">{{ connection.company }}</p>
             </div>
          </div>
         </a>
