makes link on connection details a live link

--- a/main_app/templates/connections/detail.html
+++ b/main_app/templates/connections/detail.html
@@ -125,7 +125,7 @@
                     <span class="font-bold">Phone:</span> {{connection.phone}}
                 </p>
                 <p class="font-primary text-md font-normal">
-                    <span class="font-bold">URL:</span> {{connection.url}}
+                    <span class="font-bold">URL:</span> <a href="http://{{connection.url}}">{{connection.url}}</a>
                 </p>
             </div>
         </div>
