--- a/main_app/templates/connections/index.html
+++ b/main_app/templates/connections/index.html
@@ -19,8 +19,9 @@
         <a href="{% url 'connections_detail' connection.id %}">
          <div class="card bg-white w-full max-h-fit hover:scale-105 transition duration-300 text-center">
             <h3 class="bg-cyan-300 p-2 capitalize font-semibold">{{ connection.name }}</h3>
-            <div class="flex flex-col items-center px-4 justify-center h-32">
-                <p class="text-2xl font-bold capitalize">{{ connection.company }}</p>
+            <div class="flex flex-col items-center px-4 justify-center h-36 py-2">
+                <p class="text-lg capitalize mb-2"><span class="text-cyan-500 font-bold">Company: </span><br>{{ connection.company }}</p>
+                <p class="text-lg capitalize"><span class="text-cyan-500 font-bold">Met at: </span><br>{{ connection.location }}</p>                
             </div>
          </div>
         </a>
