--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -38,35 +38,24 @@
     </a>
   </nav>
 
-  <div class="flex justify-center items-center h-screen bg-blue-400">
+  <div class="flex justify-center items-center h-[92vh] bg-primary overflow-hidden">
 
     <!--Login container-->
     <div class="w-96 p-6 shadow-lg bg-white rounded-md">
-      <h1 class="text-3xl block text-center font-semibold"><i class="fa-solid fa-user-astronaut"></i>Login:</h1>
+      <h1 class="text-3xl block text-center font-primary font-semibold"><i class="fa-solid fa-user-astronaut"></i>Login:</h1>
       <hr class="mt-3">
       <!--Login Form-->
       <form method="POST" action="{% url 'login' %}">
         {% csrf_token %}
       <!--User Name-->
         <div class="mt-3">
-          <label for="username" class="block text-base mb-1">Username</label>
-          <input type="text" name="username" id="username" class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-grey-600" placeholder="Enter Username" />
+          <label for="username" class="block text-primary font-primary font-semibold mb-1">Username</label>
+          <input type="text" name="username" id="username" class="border w-full text-secondary px-2 py-1 focus:outline-none focus:ring-0 focus:border-grey-600" placeholder="Enter Username" />
         </div>
         <!--Password-->
         <div class="mt-3">
-          <label for="password" class="block text-base mb-1">Password</label>
-          <input type="password" name="password" id="password" class="border w-full text-base px-2 py-1 focus:outline-none focus:ring-0 focus:border-grey-600" placeholder="Enter Password" />
-        </div>
-        <!--Remember ME-->
-          <div class="mt-3 flex justify-between item-center">
-          <div>
-            <input type="checkbox">
-            <label>Remember Me</label>
-          </div>
-          <!--Forgot Password-->
-          <div>
-            <a href="#" class="text-blue-800 font-semibold">Forgot Password?</a>
-          </div>
+          <label for="password" class="block text-primary font-primary font-semibold mb-1">Password</label>
+          <input type="password" name="password" id="password" class="border w-full text-secondary px-2 py-1 focus:outline-none focus:ring-0 focus:border-grey-600" placeholder="Enter Password" />
         </div>
         <!--Submit Button-->
         <input type="hidden" name="next" value="{{ next }}">
