--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -68,17 +68,19 @@
       <div id="signup-form" class="bg-black-transparent hidden w-screen h-screen absolute top-0 left-0">
         <div class="flex justify-center items-center h-full px-4">
           <form
-            class="w-full p-5 bg-slate-100 my-5 xl:w-1/4 rounded-xl shadow-2xl"
+            class="w-full p-5 bg-slate-100 my-5 xl:w-1/3 rounded-xl shadow-2xl flex flex-col justify-center"
             method="POST"
             action="{% url 'signup' %}">
             {% csrf_token %}
-            <h3 class="font-primary text-primary text-2xl font-bold">
-              Create an account
-            </h3>
+            <div class="flex justify-center">
+              <h3 class="font-primary text-primary text-2xl font-bold">
+                Create an account
+              </h3>
+            </div>
             {{ form.as_p }}
             <input
               type="submit"
-              class="bg-primary button-text mt-4 text-white py-1 px-5 rounded-full text-sm"
+              class="bg-primary self-center button-text mt-4 text-white py-1 px-5 rounded-full text-sm"
               value="Sign Up" />
           </form>
         </div>
