--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -38,7 +38,7 @@
     </a>
   </nav>
 
-  <div class="flex justify-center items-center h-[92vh] bg-primary overflow-hidden">
+  <div class="flex justify-center items-center h-[92vh] bg-blue-400 overflow-hidden">
 
     <!--Login container-->
     <div class="w-96 p-6 shadow-lg bg-white rounded-md">
