--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -67,20 +67,21 @@
 
       <div id="signup-form" class="bg-black-transparent hidden w-screen h-screen absolute top-0 left-0">
         <div class="flex justify-center items-center h-full px-4">
-          <form
-            class="w-full p-5 bg-slate-100 my-5 xl:w-1/3 rounded-xl shadow-2xl flex flex-col justify-center"
+          <form id="signup-form"
+            class="w-full p-8 bg-white my-5 xl:w-1/3 rounded-xl shadow-2xl flex flex-col justify-center"
             method="POST"
             action="{% url 'signup' %}">
             {% csrf_token %}
             <div class="flex justify-center">
-              <h3 class="font-primary text-primary text-2xl font-bold">
+              <h3 class="font-primary text-3xl font-bold">
                 Create an account
               </h3>
             </div>
+            <hr class="my-3">
             {{ form.as_p }}
             <input
               type="submit"
-              class="bg-primary self-center button-text mt-4 text-white py-1 px-5 rounded-full text-sm"
+              class="bg-primary self-center button-text border-2 border-primary mt-6 text-white py-1 px-5 rounded-full text-sm cursor-pointer hover:text-primary hover:bg-white transition duration-300"
               value="Sign Up" />
           </form>
         </div>
