minor styling fixes on signup box

--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -74,14 +74,14 @@
             {% csrf_token %}
             <div class="flex justify-center">
               <h3 class="font-primary text-3xl font-bold">
-                Create an account
+                Create An Account
               </h3>
             </div>
             <hr class="my-3">
             {{ form.as_p }}
             <input
               type="submit"
-              class="bg-primary self-center button-text border-2 border-primary mt-6 text-white py-1 px-5 rounded-full text-sm cursor-pointer hover:text-primary hover:bg-white transition duration-300"
+              class="border-2 border-blue-500 bg-blue-800 text-white rounded-md py-1 w-full hover:bg-transparent hover:text-blue-500 font-semibold cursor-pointer mt-5"
               value="Sign Up" />
           </form>
         </div>
