--- a/main_app/templates/connections/detail.html
+++ b/main_app/templates/connections/detail.html
@@ -19,8 +19,9 @@
             </a>
         </div>
     </div>
+    <hr class="my-3">
 
-    <section>
+    <section class="mt-6">
         <!-- connection details top card -->
         <div class="card my-3 min-h-fit text-center shadow-md w-full">
             <!-- connection details blue header -->
