--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -7,7 +7,7 @@
 
   
   <!-- Going cold section -->
-  <h1 class="text-2xl font-primary font-bold text-primary mt-4">Going Cold</h1>
+  <h1 class="text-2xl font-primary font-bold mt-4">Going Cold</h1>
   <section class="card my-3 bg-violet-100 p-3">
     
     <!-- Container for job app and connections containers -->
@@ -87,7 +87,7 @@
 </div>
 </section>
 
-<h1 class="text-2xl font-primary font-bold text-primary mt-10">Pending To-Do's</h1>
+<h1 class="text-2xl font-primary font-bold mt-10">Pending To-Do's</h1>
 <section class="card bg-violet-100 my-3 p-6">
   <div class="grid 2xl:grid-cols-5 grid-cols-1 gap-4 overflow-y-auto p-4 pt-3 h-80 rounded-2xl">
     {% for job in jobs %}
