--- a/main_app/templates/jobs/detail.html
+++ b/main_app/templates/jobs/detail.html
@@ -16,8 +16,9 @@
         </a>
       </div>
     </div>
+    <hr class="my-3">
 
-		<section>
+		<section class="mt-6">
 			<!-- job details top card -->
 			<div class="card my-3 min-h-fit text-center shadow-md w-full">
 				<!-- job details green header -->
