--- a/main_app/templates/jobs/index.html
+++ b/main_app/templates/jobs/index.html
@@ -10,6 +10,7 @@
       Add Job App
     </a>
   </div>
+  <hr class="my-6">
 
   <!-- status columns container -->
   <div class="mt-4 flex xl:flex-row flex-col w-full gap-5">
@@ -134,7 +135,7 @@
   </div>
 
   <div class="flex justify-center xl:block">
-    <h1 class="font-primary font-bold text-primary text-3xl mt-10">Bookmarked Jobs ({{ num_bookmarked }})</h1>
+    <h1 class="font-primary font-bold  text-2xl mt-10">Bookmarked Jobs ({{ num_bookmarked }})</h1>
   </div>
 
   <section class="card my-3 bg-violet-100 p-6 ">
@@ -152,7 +153,7 @@
   </section>
 
   <div class="flex justify-center xl:block">
-    <h1 class="font-primary font-bold text-primary text-3xl mt-10">Search My Job Apps</h1>
+    <h1 class="font-primary font-bold  text-2xl mt-10">Search My Job Apps</h1>
   </div>
 
   <form action="{% url 'index' %}" method="GET">
@@ -161,7 +162,7 @@
         <path fill-rule="evenodd" d="M10.5 3.75a6.75 6.75 0 1 0 0 13.5 6.75 6.75 0 0 0 0-13.5ZM2.25 10.5a8.25 8.25 0 1 1 14.59 5.28l4.69 4.69a.75.75 0 1 1-1.06 1.06l-4.69-4.69A8.25 8.25 0 0 1 2.25 10.5Z" clip-rule="evenodd" />
       </svg>   
     </label>
-    <input id="search-bar" name="search_query" class="lowercase xl:w-1/2 w-full my-4 border-0 bg-violet-100 rounded-full px-10 font-secondary" placeholder="Enter a company name to search..." type="text">
+    <input id="search-bar" name="search_query" class="lowercase xl:w-1/2 w-full my-3 border-0 bg-violet-100 rounded-full px-10 font-secondary" placeholder="Enter a company name to search..." type="text">
     <button type="submit" class="button-text block xl:inline-block mx-auto shrink-0 bg-primary border-2 border-primary text-white text-sm xl:ml-3 px-6 py-2 rounded-full hover:text-primary hover:bg-white transition duration-300">Search</button>
   </form>
 
